--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
-  margin: 0;
+  margin: 10%;
   padding: 0;
   font-family: sans-serif;
+  background-color: aquamarine;
 }
 .hidden{
   display: none;
